@@ -1,5 +1,5 @@
 AUX synergy-1.3.1+gcc-4.3.patch 4463 RMD160 e7c4fb526ec0011a3a9b9974dc20956ccef03a22 SHA1 b3a179405bc5b98c2379e13c27a760b543f7a476 SHA256 0dfcdedce8de2cf1285a7af30652eba7234d95d769f762774975ea4d0f293375
 DIST synergy-1.3.1.tar.gz 793172 RMD160 5f5d7cb8fcfb57a6c8eae83fb53c704cb85c6c16 SHA1 03113ec8aadfecaeba8e369b083f4fb5b44f5c62 SHA256 4a15e26456498dda5f3aa7d688a4892e0c50394a2f01685136fbc954bacc9691
-EBUILD synergy-1.3.1.ebuild 1353 RMD160 82bda18a8c8d66e94a8968b4ccc325c7d48e9577 SHA1 ac4b904ec29681baa4797cbe4a489284af2dd28c SHA256 ba309eb7f7bec71ef9dc7b349be3062c25c0b79c4377ff10210f8c6656d22941
-MISC ChangeLog 7588 RMD160 6a25d0d6ca91dd06c12c52c8b8538129aaca1e1e SHA1 3cd08ceed83370226234b58e23744cf84bcf97e2 SHA256 a2c3be427620e986b2573b91a7a1b1faeac3e8be68fe45a1718035cbb0369606
+EBUILD synergy-1.3.1.ebuild 1427 RMD160 5fd8e2b3c2e4adbfa10a79d9a608f8a41fa6d777 SHA1 987920d242b123b19cca0c637f2bd6eb8e5ff2a7 SHA256 3c6f65e2d4284ce44add8f33d224d7a44c3cf6c4f7783f0a73004bb8346a36fe
+MISC ChangeLog 7756 RMD160 05358148d50ffe3b9015bdfdd2141006020f0082 SHA1 d9cac57e0bc1b0b7e38bbd53e5383ffbd5127d2b SHA256 fac1c4e28e9d5b29b0d5b3723b0c6c2c4b73f818d277c2e3e1787c4e7e6aa172
 MISC metadata.xml 270 RMD160 6aa4dff8f35775a40f4d04bfca8e1e24161e9585 SHA1 d38202d496f7bbe77326209191e346917562d9ab SHA256 f683d99386ed59553eff64672bda4e5ecc840de7f5cdf8aa4c117b1dd3b2235a
