@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/synergy
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.58 2009/05/15 08:00:10 solar Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.59 2009/10/23 20:47:16 darkside Exp $
+
+  23 Oct 2009; Jeremy Olexa <darkside@gentoo.org> synergy-1.3.1.ebuild:
+  add --disable-debug because debugging exposes an assertion error in
+  switchInDirection()
 
   15 May 2009; <solar@gentoo.org> synergy-1.3.1.ebuild:
   - keyword ~arm
